tests/good/nat_num_1.ppl
-- Tests whether Nats are accepted as factor weights

define prob: Bool = amb (factor 1 in True) (factor 2 in False);

prob